--- a/cppTest.vcxproj.filters
+++ b/cppTest.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="MaxArea.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="FindMaxAverage.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
