--- a/cppTest.vcxproj.filters
+++ b/cppTest.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="FindMaxAverage.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MaxVowels.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
