--- a/cppTest.vcxproj
+++ b/cppTest.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="BoundCheckArray.h" />
     <ClInclude Include="CanPlaceFlowers.h" />
     <ClInclude Include="Compress.h" />
+    <ClInclude Include="FindDifference.h" />
     <ClInclude Include="FindMaxAverage.h" />
     <ClInclude Include="GreatestCommonDivisorOfString.h" />
     <ClInclude Include="HighCreditAccount.h" />
