--- a/cppTest.vcxproj.filters
+++ b/cppTest.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="PivotIndex.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="FindDifference.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
